# accessible-pdf-rocky

./: .gitignore  .markdownlint.json  .yamllint.yml  README.md  app.sln  codecov.yml  cspell.json  docker-compose.yml  justfile  package.json
.devcontainer/: README.md  dev.Dockerfile  devcontainer.json  docker-compose.yml  setup.sh  wait-for-db-api.sh
.github/: CODEOWNERS  dependabot.yml
client/: docker-init.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
controller/: Dockerfile  main.py  metrics.py  pyproject.toml  queue_listener.py
controller/db/: client.py  models.py  session.py
controller/hpc/: status.py  submit.py
controller/hpc/scripts/: export_slurm_metrics.sh  job.sh  slurm_sbatch_wrapper.sh
controller/r2/: __init__.py  download.py  presigned.py  upload.py
controller/services/: job_runner.py  ocr_engine.py  pdf_builder.py  pdf_normalizer.py  pdf_parser.py  result_handler.py  wcag_engine.py
controller/tests/: test_db_r2.py  test_main.py
controller/tests/hpc/: test_submit.py
controller/tests/services/: test_services.py
docs/: ARCHITECTURE.md  CODECOV_SETUP.md  DEVELOPMENT.md  METRICS_DEPLOYMENT.md  (+6 more)
hpc_runner/: pyproject.toml  runner.py
hpc_runner/ai/: __init__.py
hpc_runner/ai/alt_text/: __init__.py  inference.py  model.py
hpc_runner/ai/layout/: __init__.py  inference.py  model.py
hpc_runner/ai/tables/: __init__.py  inference.py  model.py
hpc_runner/processors/: __init__.py  alttext.py  layout.py  ocr.py  tagging.py  wcag.py
hpc_runner/tests/: test_ai_processors.py  test_runner.py
(+77 files in other folders)
